<resources>
    <string name="app_name">E聊</string>
    <string name="conversation_del">删除会话</string>
    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>
    <string name="time_more">99+</string>
    <string name="home_conversation_tab">会话</string>
    <string name="home_setting_tab">设置</string>
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>
    <string name="summary_friend_add">请求添加好友</string>
    <string name="summary_friend_added">我已添加</string>
    <string name="summary_friend_add_me">请求添加</string>
    <string name="summary_friend_recommend">推荐添加</string>
    <string name="summary_me">我</string>
    <string name="summary_group_apply">申请加群</string>
    <string name="summary_group_invite">邀请</string>
    <string name="summary_group_add">加入群</string>
    <string name="summary_agree">同意</string>
    <string name="summary_disagree">拒绝</string>
    <string name="summary_invite_person">邀请人</string>
    <string name="summary_handle_person">处理人</string>
    <string name="summary_group_admin_change">管理员变更</string>
    <string name="summary_group_info_change">群资料变更</string>
    <string name="summary_group_mem_change">群成员变更</string>
    <string name="summary_group_mem_add">加入群</string>
    <string name="summary_group_mem_quit">退出群</string>
    <string name="summary_group_mem_kick">被踢出群</string>
    <string name="summary_group_mem_modify">资料变更</string>
    <string name="conversation_system">系统消息</string>
    <string name="conversation_system_friend">新朋友</string>
    <string name="conversation_system_group">群组消息</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="download_fail">下载失败</string>
    <string name="file_not_found">未找到文件，请稍后重试</string>
    <string name="save_fail">保存失败</string>
    <string name="save_exist">文件已存在</string>
    <string name="save_succ">保存成功</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_audio_too_long">录音过长，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_pullback">撤回</string>
    <string name="chat_pullback_not_support">该会话不支持消息撤回</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="chat_typing">对方正在输入…</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="login">立即登录</string>
    <string name="login_success">登录成功</string>
    <string name="set_nickname">设置昵称</string>
    <string name="nickname_not_empty">昵称不能为空！</string>
    <string name="black_list">黑名单</string>
    <string name="loading">加载中...</string>
    <string name="not_empty">不能为空！</string>
    <string name="edit_auth_info">编辑认证资料</string>
    <string name="auth_input_nickname">请输入昵称（必填）</string>
    <string name="mobile">手机登录</string>
    <string name="auth_input_mobile">请输入手机号码（必填）</string>
    <string name="height">身高</string>
    <string name="edit_input_height">请设置身高（必填）</string>
    <string name="weight">体重</string>
    <string name="edit_input_weight">请设置体重（必填）</string>
    <string name="constellation">星座</string>
    <string name="edit_auth_set_constellation">请设置星座（必填）</string>
    <string name="edit_auth_city">所在城市</string>
    <string name="edit_auth_set_city">请设置城市（必填）</string>
    <string name="edit_introduce">个人介绍</string>
    <string name="edit_auth_set_introduce">请编辑个人介绍（必填）</string>
    <string name="edit_auth_image_label">形象标签</string>
    <string name="edit_auth_set_image_label">请设置形象标签（必填）</string>
    <string name="edit_auth_self_label">个人标签</string>
    <string name="edit_auth_set_self_label">请设置个人签名（必填）</string>
    <string name="nickname_not_emtpy">昵称不能为空！</string>
    <string name="edit_auth_tips_input_mobile">请输入正确的手机号码！</string>
    <string name="edit_auth_tips_select_height">请选择身高！</string>
    <string name="edit_auth_tips_select_weight">请选择体重！</string>
    <string name="edit_auth_tips_select_constellation">请选择星座！</string>
    <string name="edit_auth_self_introduce">编辑自我介绍</string>
    <string name="edit_auth_self_sign">编辑个性签名</string>
    <string name="edit_auth_tips_inout_city">请选择城市！</string>
    <string name="edit_auth_tips_input_introduce">请输入个人介绍！</string>
    <string name="edit_auth_tips_inout_image_label">请选择形象标签！</string>
    <string name="edit_auth_tips_input_select_label">请填写个性签名！</string>
    <string name="edit_auth_tips_id_card_1">请选择身份证正面！</string>
    <string name="edit_auth_tips_id_card_2">请选择身份证反面！</string>
    <string name="loading_upload_info">正在上传信息...</string>
    <string name="home_page_chat">私聊</string>
    <string name="home_page_video">视频聊</string>
    <string name="home_page_gift">送礼物</string>
    <string name="admin_yes">确认</string>
    <string name="admin_no">取消</string>
    <string name="repulse_call">取消</string>
    <string name="accept_call">接受</string>
    <string name="register">登录</string>
    <string name="verify">验证</string>
    <string name="userinfo_bar_userid">加载中...</string>
    <string name="userinfo_bar_time">通话:0小时</string>
    <string name="userinfo_bar_good">好评:0</string>
    <string name="userinfo_bar_location">外太空</string>
    <string name="userinfo_bar_isonLine">离线</string>
    <string name="userinfo_bar_loveme">关 注</string>
    <string name="userinfo_bar_max">最高</string>
    <string name="count_number_love">--</string>
    <string name="count_text_love">关注</string>
    <string name="count_number_fans">--</string>
    <string name="count_text_fans">粉丝</string>
    <string name="count_number_divide">--</string>
    <string name="count_text_divide">邀请分成比例</string>
    <string name="list_bar_gift_text">收到的礼物（0）</string>
    <string name="list_bar_video_text">小视频（0）</string>
    <string name="list_bar_photo_text">私照（0）</string>
    <string name="video_recommend">-视频推荐榜-</string>
    <string name="register_btn_text">一键微信登录</string>
    <string name="register_logo_text">聊天能赚钱的超好玩APP</string>
    <string name="show_contribution_text">贡献榜</string>
    <string name="show_contribution_text_top">TOP</string>
    <string name="adpter_video_title">一个很健康的小视频</string>
    <string name="left_love_number">---</string>
    <string name="left_start_number">----</string>
    <string name="register_msg_there">其它登录方式</string>
    <string name="terms_of_service_tx">登录即代表你同意</string>
    <string name="terms_of_service">服务和隐私条款</string>
    <string name="call_player_btn">视频</string>
    <string name="share_me_msg">分享有礼</string>
    <string name="share_user_msg">分享有礼</string>
    <string name="call_player_msg_to">正在等待对方接受邀请...</string>
    <string name="call_player_msg_go">邀请你视频聊天</string>
    <string name="join_black_list">加入黑名单</string>
    <string name="report_this_user">举报该用户</string>
    <string name="phone_number_hint">输入手机号</string>
    <string name="phone_code_hint">输入验证码</string>
    <string name="phone_number_digits">0123456789</string>
    <string name="video_chat_msg">送抽奖礼物,与\nta共赢超级大奖</string>
    <string name="same_city_msg">V1以上的用户才可以查看同城异性\n您当前等级V0</string>
    <string name="same_city_btn">去升级</string>
    <string name="view_msg_menu1">系统消息</string>
    <string name="view_msg_menu2">官方小助手[工作日10点~18点]</string>
    <string name="view_msg_menu3">私信</string>
    <string name="view_msg_menu4">关注(-)</string>
    <string name="view_msg_menu5">粉丝(-)</string>
    <string name="videoplay_all_push">换一批</string>
    <string name="people_img_masking">审核中</string>
    <string name="inform_cause_text">举报原因</string>
    <string name="inform_cause_right">请选择</string>
    <string name="inform_cause_hint">请具体描述遇到的情形...</string>
    <string name="inform_cause_img">上传截图（选填）</string>
    <string name="tojoin_cause_text">合作方式</string>
    <string name="tojoin_info_text">联系方式</string>
    <string name="tojoin_cause_hint">请输入您的相关信息和联系方式,3个工作日内联系您!</string>
    <string name="right_text_top">拍摄视频</string>
    <string name="right_text_bottom">上传视频</string>
    <string name="radio_days">日榜</string>
    <string name="radio_weeks">周榜</string>
    <string name="radio_alls">总榜</string>
    <string name="text_my_ranking">我的排名:未上榜</string>
    <string name="chat_hint">发链接,二维码,引导加微信,QQ的都是诈骗,请勿轻信,举报有奖!</string>
    <string name="time_btn">跳过</string>
    <string name="splash_bottom_text">Copyright©2018-2019</string>
    <string name="splash_title">传递快乐 分享生活</string>
    <string name="userpage_moneytext">我的钱包</string>
    <string name="userpage_rechargetext">充值</string>
    <string name="userpage_bytext">购买萌币</string>
    <string name="userpage_alltext">更多购买</string>
    <string name="userpage_msgtext">(首次充值可获免单机会)</string>
    <string name="rechargeSellNumber">39元</string>
    <string name="rechargeSellNumber2">59元</string>
    <string name="rechargeSellNumber3">199元</string>
    <string name="rechargeBuyNumber">3900萌币</string>
    <string name="rechargeBuyNumber2">5900萌币</string>
    <string name="rechargeBuyNumber3">19000萌币</string>
    <string name="helper_photo">私照</string>
    <string name="helper_video">视频</string>
    <string name="helper_gird">礼物</string>
    <string name="msg_gird">送礼物</string>
    <string name="msg_send">发送</string>
    <string name="toast1">测试信息1</string>
    <string name="toast2">测试信息2</string>
    <string name="toast3">测试信息3</string>
    <string name="test_text">加载中...</string>
    <string name="test_number">0</string>
    <string name="test_number2">-</string>
    <string name="test_number3">刚刚中奖300萌币</string>
    <string name="redact_text1">个人信息</string>
    <string name="redact_text2">个人封面(真实丰富的照片有利于被更多人发现)</string>
    <string name="redact_head">头像</string>
    <string name="redact_name">昵称</string>
    <string name="redact_sex">性别(不可修改)</string>
    <string name="redact_sign">个性签名</string>
    <string name="redact_nametext"></string>
    <string name="redact_sextext">未知</string>
    <string name="dialog_ratio_text1">我的分成比例</string>
    <string name="dialog_ratio_numebr">分成比例速度升90%</string>
    <string name="dialog_ratio_text2">前两日和当日获得的总积分超过一定的数值且邀请6位以上好友注册</string>
    <string name="dialog_ratio_grader">我的等级详情</string>
    <string name="dialog_ratio_invite">邀请</string>
    <string name="isMulSelect">是否开启多选（默认关闭）</string>
    <string name="mulMaxSize">多选时可选图片的数量（默认数量：9）</string>
    <string name="isShowCamera">是否开启相机（默认开启）</string>
    <string name="isCrop">是否开启裁剪（默认关闭）</string>
    <string name="Glide">Glide</string>
    <string name="Fresco">Fresco</string>
    <string name="Picasso">Picasso</string>
    <string name="OpenCamera">直接开启相机</string>
    <string name="bind_mobile">绑定手机</string>
    <string name="plase_input_correct_mobile">请输入正确的手机号码！</string>
    <string name="call">通话:</string>
    <string name="praise">好评:</string>
    <string name="minute">/分钟</string>
    <string name="fans">粉丝</string>
    <string name="submit">提交</string>
    <string name="perfect_info">完善资料</string>
    <string name="required">(必填)</string>
    <string name="please_full_nickname">请填写昵称</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="select_sex_tips">*选择性别后无法更改,请选择真实性别</string>
</resources>